--- a/main.css
+++ b/main.css
@@ -212,6 +212,7 @@ input:checked ~ .bubble::after {
     color: #fff;
     cursor: pointer;
     transition: 0.2s ease-in-out;
+    margin-right: 1rem;
 }
 
 .todo-item .actions button:hover {
