--- a/main.css
+++ b/main.css
@@ -182,6 +182,7 @@ input:checked ~ .bubble::after {
     border-radius: 0.5rem;
     box-shadow: var(--shadow);
     margin-bottom: 1rem;
+    flex-wrap: wrap;
 }
 
 .todo-item label {
@@ -203,6 +204,7 @@ input:checked ~ .bubble::after {
 .todo-item .actions {
     display: flex;
     align-items: center;
+    
 }
 
 .todo-item .actions button {
@@ -212,7 +214,6 @@ input:checked ~ .bubble::after {
     color: #fff;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    margin-right: 1rem;
 }
 
 .todo-item .actions button:hover {
